Reverted header change and fixed header and scrolling on small screens.

--- a/src/stylesheets/custom_list_editor.scss
+++ b/src/stylesheets/custom_list_editor.scss
@@ -1,6 +1,7 @@
 .custom-list-editor {
   margin-left: 20px;
   flex-grow: 1;
+  overflow-y: scroll;
 
   .custom-list-editor-header {
     display: flex;
