--- a/src/stylesheets/custom_lists.scss
+++ b/src/stylesheets/custom_lists.scss
@@ -4,15 +4,17 @@
   height: 100%;
 
   .custom-lists-container {
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-    overflow-y: scroll;
+    flex: 1;
+    position: relative;
+    overflow-y: hidden;
+    padding-bottom: 10px;
   }
 
   .custom-lists {
+    height: 100%;
+    width: 100%;
+    position: absolute;
     display: flex;
-    flex-grow: 1;
     flex-direction: row;
   }
 
@@ -20,6 +22,7 @@
     border: 1px solid $gray;
     padding: 15px;
     margin: 7px;
+    overflow-y: scroll;
 
     a.btn, a.btn-default {
       color: $invertedlinkcolor;
@@ -46,8 +49,6 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      width: 300px;
-      height: 100px;
       font-size: 0.9em;
       border: 1px solid $pagecolorlight;
       border-bottom-color: $pagetextcolor;
