--- a/src/stylesheets/header.scss
+++ b/src/stylesheets/header.scss
@@ -1,7 +1,3 @@
-.navbar-default {
-  overflow: hidden;
-}
-
 .navbar-default .navbar-brand {
   color: $pagecolorlight;
   font-size: 1.8em;
